<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanaodegree_apps">My Nanaodegree apps</string>
    <string name="popular_movies">popular movies</string>
    <string name="stock_hawk">stock hawk</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="make_your_app_material">make your app material</string>
    <string name="go_ubiquitous">go ubiquitous</string>
    <string name="capstone_my_own_app">capstone: my own app</string>
    <string name="button_click_base_message">this button will launch my</string>
</resources>
