<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/udacity_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/my_nanaodegree_apps"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/popular_movies_button"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:text="@string/popular_movies"/>

        <Button
            android:id="@+id/stock_hawk_button"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:text="@string/stock_hawk"/>

        <Button
            android:id="@+id/build_it_bigger_button"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:text="@string/build_it_bigger"/>

        <Button
            android:id="@+id/make_your_app_material_button"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:text="@string/make_your_app_material"/>

        <Button
            android:id="@+id/go_ubiquitous_button"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:text="@string/go_ubiquitous"/>

        <Button
            android:id="@+id/mt_own_app_button"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:text="@string/capstone_my_own_app"
            android:theme="@style/MyDarkOrangeButtonStyle"/>

    </LinearLayout>
</ScrollView>
